tests/baselines/reference/emitExponentiationOperator4.errors.txt
emitExponentiationOperator4.ts(14,1): error TS2532: Object is possibly 'undefined'.
emitExponentiationOperator4.ts(15,1): error TS2532: Object is possibly 'undefined'.
emitExponentiationOperator4.ts(16,1): error TS2532: Object is possibly 'undefined'.
emitExponentiationOperator4.ts(17,1): error TS2532: Object is possibly 'undefined'.
emitExponentiationOperator4.ts(18,1): error TS2532: Object is possibly 'undefined'.
emitExponentiationOperator4.ts(21,6): error TS2532: Object is possibly 'undefined'.
emitExponentiationOperator4.ts(22,6): error TS2532: Object is possibly 'undefined'.
emitExponentiationOperator4.ts(23,6): error TS2532: Object is possibly 'undefined'.
emitExponentiationOperator4.ts(24,6): error TS2532: Object is possibly 'undefined'.
emitExponentiationOperator4.ts(25,6): error TS2532: Object is possibly 'undefined'.


==== emitExponentiationOperator4.ts (10 errors) ====
    var temp: any;
    
    (<number>temp) ** 3;
    (<number>--temp) ** 3;
    (<number>++temp) ** 3;
    (<number>temp--) ** 3;
    (<number>temp++) ** 3;
    
    1 ** (<number>--temp) ** 3;
    1 ** (<number>++temp) ** 3;
    1 ** (<number>temp--) ** 3;
    1 ** (<number>temp++) ** 3;
    
    (void --temp) ** 3;
    ~~~~~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    (void temp--) ** 3;
    ~~~~~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    (void 3) ** 4;
    ~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    (void temp++) ** 4;
    ~~~~~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    (void temp--) ** 4;
    ~~~~~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    
    
    1 ** (void --temp) ** 3;
         ~~~~~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    1 ** (void temp--) ** 3;
         ~~~~~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    1 ** (void 3) ** 4;
         ~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    1 ** (void temp++) ** 4;
         ~~~~~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    1 ** (void temp--) ** 4;
         ~~~~~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    
    (~ --temp) ** 3;
    (~ temp--) ** 3;
    (~ 3) ** 4;
    (~ temp++) ** 4;
    (~ temp--) ** 4;
    
    1 ** (~ --temp) ** 3;
    1 ** (~ temp--) ** 3;
    1 ** (~ 3) ** 4;
    1 ** (~ temp++) ** 4;
    1 ** (~ temp--) ** 4;